[gd_scene load_steps=8 format=3 uid="uid://c6y4ttibwy3ay"]

[ext_resource type="PackedScene" uid="uid://danbn6jjfghru" path="res://src/scenes/ui/components/fade_rect.tscn" id="1_g3g4g"]
[ext_resource type="Script" path="res://src/scripts/ui/pages/new_game.gd" id="1_pyp32"]
[ext_resource type="PackedScene" uid="uid://bs7s2yo0kutpx" path="res://src/scenes/ui/components/safe_margins.tscn" id="3_4l57n"]
[ext_resource type="Texture2D" uid="uid://pgsxe1dk7qmx" path="res://src/resources/assets/ui/arrow-to-left.svg" id="3_ccqel"]
[ext_resource type="PackedScene" uid="uid://dbpkcwga3251w" path="res://src/scenes/ui/components/config_selector.tscn" id="3_m23a8"]
[ext_resource type="Texture2D" uid="uid://cyd74v1etxj2a" path="res://src/resources/assets/ui/play.svg" id="4_lry2e"]
[ext_resource type="Script" path="res://src/scripts/ui/components/multiplayer_panel.gd" id="8_txr3i"]

[node name="NewGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyp32")

[node name="SafeMargins" parent="." instance=ExtResource("3_4l57n")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="SafeMargins"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer"]
layout_mode = 2

[node name="Options" type="TabContainer" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Select Config" type="MarginContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config"]
layout_mode = 2

[node name="ConfigSelector" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config/VBoxContainer" instance=ExtResource("3_m23a8")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
icon = ExtResource("3_ccqel")
expand_icon = true

[node name="ReadyButton" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"
icon = ExtResource("4_lry2e")
icon_alignment = 2
expand_icon = true

[node name="Multiplayer" type="MarginContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
script = ExtResource("8_txr3i")

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer"]
layout_mode = 2

[node name="Connect" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer"]
layout_mode = 2

[node name="Host" type="LineEdit" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Connect"]
layout_mode = 2
size_flags_horizontal = 3
text = "wss://obf-server-signaling.onrender.com"
placeholder_text = "Host"
alignment = 1

[node name="RoomSecret" type="LineEdit" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Connect"]
layout_mode = 2
placeholder_text = "Room"
alignment = 1

[node name="Mesh" type="CheckBox" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Connect"]
layout_mode = 2
text = "Mesh"
alignment = 1

[node name="Console" type="TextEdit" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
virtual_keyboard_enabled = false

[node name="Options" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"
icon_alignment = 1
expand_icon = true

[node name="Stop" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"
icon_alignment = 1
expand_icon = true

[node name="Peers" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Peers"
icon_alignment = 1
expand_icon = true

[node name="Seal" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Seal"
icon_alignment = 1
expand_icon = true

[node name="Ping" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ping"
icon_alignment = 1
expand_icon = true

[node name="FadeRect" parent="." instance=ExtResource("1_g3g4g")]
layout_mode = 1

[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Select Config/VBoxContainer/HBoxContainer/ReadyButton" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options/Start" to="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer" method="_on_start_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options/Stop" to="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer" method="_on_stop_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options/Peers" to="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer" method="_on_peers_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options/Seal" to="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer" method="_on_seal_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer/VBoxContainer/Options/Ping" to="SafeMargins/MarginContainer/VBoxContainer/Options/Multiplayer" method="_on_ping_pressed"]
